[package]
name = "ndn-nfd-mgmt"
description = "NFD management protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
ndn-protocol = { version = "0.3.0", path = "../ndn-protocol" }
ndn-tlv = { version = "0.3.0", path = "../ndn-tlv" }
